fix: aumentando gap

--- a/src/app/components/Footer/Footer.css
+++ b/src/app/components/Footer/Footer.css
@@ -36,6 +36,6 @@
   }
 
   .icons-container {
-    gap: 8%;
+    gap: 7%;
   }
 }
